# oidc-auth-fastapi

./: README.md  pyproject.toml
oidc_auth/: __init__.py
tests/: test_oidc_auth.py
