[project]
name = "oidc-auth-fastapi"
version = "0.1.0"
description = "Reusable BFF OIDC auth for FastAPI (Authlib + Starlette session cookie)."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "authlib>=1.3",
    "itsdangerous>=2.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["oidc_auth"]
