[project]
name = "oidc-auth-fastapi"
version = "0.1.1"
description = "Reusable BFF OIDC auth for FastAPI (Authlib + Starlette session cookie)."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "authlib>=1.3",
    "itsdangerous>=2.1",
]

[project.optional-dependencies]
test = ["pytest>=8", "httpx>=0.27"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["oidc_auth"]
